--- a/public/css/ar_app.css
+++ b/public/css/ar_app.css
@@ -8868,6 +8868,7 @@ html {
 }
 body {
   font-weight: 400;
+  padding-top: 65px;
   -webkit-animation-name: fadeIn;
   animation-name: fadeIn;
   -webkit-animation-duration: 1000ms;
@@ -8923,7 +8924,7 @@ h6 small,
   position: relative;
 }
 body #content {
-  padding: 10px 0;
+  padding: 30px 0;
 }
 @media (min-width: 1200px) {
   body.sw-toggled #content {
@@ -8936,11 +8937,10 @@ body #content {
   }
 }
 #header {
-  background: #176fa6;
+  background: #2196f3;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.3);
   height: 65px;
-  position: relative;
-  margin-bottom: 15px;
+  position: fixed;
   z-index: 10;
   width: 100%;
   right: 0;
@@ -8981,6 +8981,7 @@ body #content {
   display: block;
   font-size: 16px;
   font-weight: 100;
+  background: url("../img/header_logo.png") no-repeat;
   background-size: contain;
   margin: -7px 2px;
   width: 170px;
@@ -13238,7 +13239,7 @@ body.login-content:before {
   position: absolute;
   top: 0;
   right: 0;
-  background: #176fa6;
+  background: #adc302;
   content: "";
   z-index: 0;
 }
@@ -15582,7 +15583,7 @@ th.sorting {
     .dark-green {
       background-color: hsl(148, 100%, 23%) !important;
     }
-
+     
       /***************** End Of change dashboard color ************************/
 
       
