--- a/public/css/en_app.css
+++ b/public/css/en_app.css
@@ -8937,7 +8937,7 @@ body #content {
   }
 }
 #header {
-  background: #2196f3;
+  background: #176fa6;;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.3);
   height: 65px;
   position: fixed;
@@ -13239,7 +13239,7 @@ body.login-content:before {
   position: absolute;
   top: 0;
   left: 0;
-  background: #adc302;
+  background: #176fa6;;
   content: "";
   z-index: 0;
 }
